Fix table padding and cell sizing issues on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@ html, body {
     overflow: auto;
 
     .mat-cell {
-        min-width: 100px;
+        min-width: 125px;
         width: min-content;
         width: -moz-min-content;
     }
@@ -169,6 +169,9 @@ tr {
 
 .table-highlight {
     background-color: #9dffaa;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    min-width: 150px !important;
 }
 
 .table-subtext {
@@ -192,6 +195,10 @@ tr {
             padding-left: 10px;
         }
     }
+}
+
+.mat-cell:first-child {
+    padding-right: 10px;
 }
 
 .inline-spinner {
